--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-portfolio.css">
+    <link rel="stylesheet" href="/CSS/style-portfolio.css">
     <title>Document</title>
 </head>
 <body>
@@ -27,8 +27,8 @@
             <h1> Posição de Trabalho</h1>
             <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non voluptate ab voluptates autem? Eius, porro. Nostrum temporibus, voluptates tenetur eius molestiae.</p>
             <div class="buttons">
-                 <a href="#"> PORTFOLIO </a>
-                 <a href="#"> CONTATO </a>
+                 <a class="portfolio-button" href="#"> PORTFOLIO </a>
+                 <a class="contato-button" href="#"> CONTATO </a>
             </div>
         </div>
 
