--- a/HTML/PORTFOLIO PAGES/portfolio.html
+++ b/HTML/PORTFOLIO PAGES/portfolio.html
@@ -27,7 +27,7 @@
             <h1> Posição de Trabalho</h1>
             <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non voluptate ab voluptates autem? Eius, porro. Nostrum temporibus, voluptates tenetur eius molestiae.</p>
             <div class="buttons">
-                 <a class="portfolio-button" href="#"> PORTFOLIO </a>
+                 <a class="portfolio-button" href="#"> PORTFÓLIO </a>
                  <a class="contato-button" href="#"> CONTATO </a>
             </div>
         </div>
